# BTC

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  NPS_45_SESSION_MASTER_SPEC.md  NPS_V4_CLAUDE_CODE_STARTUP.md  PRODUCTION_READINESS_CHECKLIST.md  PROGRESS.md  PROJECT_STATE.md  PROJECT_STATE_REPORT.md  Procfile  README.md  SESSION_LOG.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
.archive/: README.md  git_history.bundle
.claude/: master-workflow.md  startup.md  templates.md  workflows.md
.project/: README.md
.session-specs/: SESSION_10_SPEC.md  SESSION_11_SPEC.md  SESSION_12_SPEC.md  SESSION_13_SPEC.md  SESSION_14_SPEC.md  SESSION_15_SPEC.md  SESSION_16_SPEC.md  SESSION_17_SPEC.md  SESSION_18_SPEC.md  SESSION_19_SPEC.md  SESSION_1_SPEC.md  SESSION_20_SPEC.md  SESSION_21_SPEC.md  SESSION_22_SPEC.md  SESSION_23_SPEC.md  SESSION_24_SPEC.md  SESSION_25_SPEC.md  SESSION_26_SPEC.md  SESSION_27_SPEC.md  SESSION_28_SPEC.md  SESSION_29_SPEC.md  SESSION_2_SPEC.md  SESSION_30_SPEC.md  SESSION_31_SPEC.md  SESSION_32_SPEC.md  SESSION_33_SPEC.md  SESSION_34_SPEC.md  SESSION_35_SPEC.md  SESSION_36_SPEC.md  SESSION_37_SPEC.md  SESSION_38_SPEC.md  SESSION_39_SPEC.md  SESSION_3_SPEC.md  SESSION_40_SPEC.md  SESSION_41_SPEC.md  SESSION_42_SPEC.md  SESSION_43_SPEC.md  SESSION_44_SPEC.md  SESSION_45_SPEC.md  SESSION_4_SPEC.md  (+5 more)
.specs/: README.md
api/: Dockerfile  pyproject.toml
database/: README.md  (+1 more)
services/scanner/: Cargo.toml  README.md  build.rs
services/scanner/src/: main.rs
services/scanner/src/balance/: mod.rs
services/scanner/src/grpc/: mod.rs
(+600 files in other folders)
