[package]
name = "nps-scanner"
version = "4.0.0"
edition = "2021"
description = "NPS Scanner Service — High-performance key scanner in Rust"

[dependencies]
# Crypto
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"] }
bitcoin = { version = "0.31", features = ["rand-std"] }
bip39 = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"

# gRPC
tonic = "0.11"
prost = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP (balance checking)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
lru = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[build-dependencies]
tonic-build = "0.11"
